Added carousel with timeline.

--- a/www/index.html
+++ b/www/index.html
@@ -19,9 +19,16 @@
 	<script src="js/controllers.js"></script>
 	<script src="js/routes.js"></script>
 	<script src="js/services.js"></script>
-	<script src="js/directives.js"></script>
+
+	<script src="lib/ionicuirouter/ionicUIRouter.js"></script>
+
+	<script src="js/directives/directives.js"></script>
+	<script src="js/directives/morphCarousel.js"></script>
 
 	<link href="css/timeline.css" rel="stylesheet">
+	<link href="css/morphCarousel.css" rel="stylesheet">
+	<link href="css/morphCarousel.black-theme.css" rel="stylesheet">
+	<link href="css/morphCarousel.white-theme.css" rel="stylesheet">
 
 	<!-- Only required for Tab projects w/ pages in multiple tabs
 	<script src="lib/ionicuirouter/ionicUIRouter.js"></script>
