Added articles to timeline.

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
 
 	<script src="js/directives/directives.js"></script>
 	<script src="js/directives/morphCarousel.js"></script>
+	<script src="js/directives/readmore.js"></script>
 
 	<link href="css/timeline.css" rel="stylesheet">
 	<link href="css/morphCarousel.css" rel="stylesheet">
