--- a/www/index.html
+++ b/www/index.html
@@ -25,11 +25,13 @@
 	<script src="js/directives/directives.js"></script>
 	<script src="js/directives/morphCarousel.js"></script>
 	<script src="js/directives/readmore.js"></script>
+	<script src="js/directives/ion-gallery.js"></script>
 
 	<link href="css/timeline.css" rel="stylesheet">
 	<link href="css/morphCarousel.css" rel="stylesheet">
 	<link href="css/morphCarousel.black-theme.css" rel="stylesheet">
 	<link href="css/morphCarousel.white-theme.css" rel="stylesheet">
+	<link href="css/ion-gallery.css" rel="stylesheet">
 
 	<!-- Only required for Tab projects w/ pages in multiple tabs
 	<script src="lib/ionicuirouter/ionicUIRouter.js"></script>
@@ -40,7 +42,7 @@
 <div>
 	<div>
 		<ion-nav-bar class="bar-stable">
-			<ion-nav-back-button class="button-icon icon ion-ios-arrow-back">Back</ion-nav-back-button>
+			<ion-nav-back-button class="button-icon icon ion-ios-arrow-back">Назад</ion-nav-back-button>
 		</ion-nav-bar>
 		<ion-nav-view></ion-nav-view>
 	</div>
