--- a/www/index.html
+++ b/www/index.html
@@ -26,12 +26,14 @@
 	<script src="js/directives/morphCarousel.js"></script>
 	<script src="js/directives/readmore.js"></script>
 	<script src="js/directives/ion-gallery.js"></script>
+	<script src="js/directives/ion-pullup.js"></script>
 
 	<link href="css/timeline.css" rel="stylesheet">
 	<link href="css/morphCarousel.css" rel="stylesheet">
 	<link href="css/morphCarousel.black-theme.css" rel="stylesheet">
 	<link href="css/morphCarousel.white-theme.css" rel="stylesheet">
 	<link href="css/ion-gallery.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 
 	<!-- Only required for Tab projects w/ pages in multiple tabs
 	<script src="lib/ionicuirouter/ionicUIRouter.js"></script>
@@ -42,7 +44,7 @@
 <div>
 	<div>
 		<ion-nav-bar class="bar-stable">
-			<ion-nav-back-button class="button-icon icon ion-ios-arrow-back">Назад</ion-nav-back-button>
+			<ion-nav-back-button class="button-icon icon ion-ios-arrow-back">&#x41D;&#x430;&#x437;&#x430;&#x434;</ion-nav-back-button>
 		</ion-nav-bar>
 		<ion-nav-view></ion-nav-view>
 	</div>
