Full refactoring according best practice.

--- a/www/index.html
+++ b/www/index.html
@@ -15,18 +15,26 @@
 	<link href="css/ionic.app.css" rel="stylesheet">
 	-->
 
-	<script src="js/app.js"></script>
-	<script src="js/controllers.js"></script>
-	<script src="js/routes.js"></script>
-	<script src="js/services.js"></script>
+	<script src="app/app.js"></script>
+	<script src="app/routes.js"></script>
+
+	<script src="app/chronicle/chronicle-controller.js"></script>
+	<script src="app/chronicle/chronicle-service.js"></script>
+
+	<script src="app/chronicleDetails/chronicleDetails-controller.js"></script>
+
+	<script src="app/login/login-controller.js"></script>
+
+	<script src="app/settings/settings-controller.js"></script>
+
+	<script src="app/signup/signup-controller.js"></script>
 
 	<script src="lib/ionicuirouter/ionicUIRouter.js"></script>
 
-	<script src="js/directives/directives.js"></script>
-	<script src="js/directives/morphCarousel.js"></script>
-	<script src="js/directives/readmore.js"></script>
-	<script src="js/directives/ion-gallery.js"></script>
-	<script src="js/directives/ion-pullup.js"></script>
+	<script src="app/directives/morphCarousel-directive.js"></script>
+	<script src="app/directives/readmore-directive.js"></script>
+	<script src="app/directives/ionGallery-directive.js"></script>
+	<script src="app/directives/ionPullup-directive.js"></script>
 
 	<link href="css/timeline.css" rel="stylesheet">
 	<link href="css/morphCarousel.css" rel="stylesheet">
