Full refactoring according best practice.

--- a/www/app/login/login.html
+++ b/www/app/login/login.html
@@ -13,7 +13,7 @@
 			<div class="spacer" style="height: 25px;"></div>
 			<a ui-sref="tabs.chronicle" id="login-button1"
 			   class="button button-outline button-dark button-block icon-right ion-log-in">Увайсці</a>
-			<a href="#/page6" id="login-button2"
+			<a ui-sref="signup" id="login-button2"
 			   class="button button-dark  button-block button-clear">Або стварыць акаўнт</a>
 		</form>
 	</ion-content>
