--- a/www/app/chronicle/chronicle.html
+++ b/www/app/chronicle/chronicle.html
@@ -10,7 +10,7 @@
 					</div>
 					<div class="cd-timeline-content padding">
 						<h5 class="cd-timeline-title marginBottom0 marginTop0">{{activity.title}}</h5>
-						<a ng-click="goToDetails(activity.id)" href="" class="cd-timeline-discuss">
+						<a ng-click="goToDetails(activity.id)" class="cd-timeline-discuss">
 							<i class="ion-document-text dark"></i>
 						</a>
 						<p class="marginTop5 cd-author">{{activity.date}}</p>
