Changes for style.

--- a/www/app/login/login.html
+++ b/www/app/login/login.html
@@ -10,7 +10,7 @@
 					<input type="password" placeholder="Пароль">
 				</label>
 			</ion-list>
-			<div class="spacer" style="height: 25px;"></div>
+			<div class="spacer login-spacer"></div>
 			<a ui-sref="tabs.chronicle" id="login-button1"
 			   class="button button-outline button-dark button-block icon-right ion-log-in">Увайсці</a>
 			<a ui-sref="signup" id="login-button2"
