--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,8 @@
 	<script src="app/chronicle/chronicle-controller.js"></script>
 	<script src="app/chronicle/chronicle-service.js"></script>
 
+	<script src="app/national/national-controller.js"></script>
+
 	<script src="app/chronicleDetails/chronicleDetails-controller.js"></script>
 
 	<script src="app/login/login-controller.js"></script>
@@ -36,12 +38,14 @@
 	<script src="app/directives/readmore-directive.js"></script>
 	<script src="app/directives/ionGallery-directive.js"></script>
 	<script src="app/directives/ionPullup-directive.js"></script>
+	<script src="app/directives/ionicSwipecards-directive.js"></script>
 
 	<link href="css/timeline.css" rel="stylesheet">
-	<link href="css/morphCarousel.css" rel="stylesheet">
-	<link href="css/morphCarousel.white-theme.css" rel="stylesheet">
+	<link href="css/morph-carousel.css" rel="stylesheet">
 	<link href="css/ion-gallery.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
+	<link href="css/swipe-cards.css" rel="stylesheet">
+	<link href="css/chronicle.css" rel="stylesheet">
 
 	<!-- Only required for Tab projects w/ pages in multiple tabs
 	<script src="lib/ionicuirouter/ionicUIRouter.js"></script>
