--- a/www/app/chronicle/chronicle.html
+++ b/www/app/chronicle/chronicle.html
@@ -1,23 +1,25 @@
 <ion-view title="Хроніка">
-	<ion-content overflow-scroll="true" padding="true" class="chronicle has-header">
-		<div class="list card chronicle-slide">
-			<morph-carousel data-items="items" on-selected="selectedItem" show-value="number"></morph-carousel>
-		</div>
-		<section id="cd-timeline" class="cd-container">
-			<div ng-repeat="activity in timeline | filter: {year: selectedItem.number}">
-				<div class="cd-timeline-block">
-					<div class="cd-timeline-picture text-center assertive">
+	<ion-content overflow-scroll="true" class="chronicle has-header">
+
+
+		<swipe-cards>
+			<swipe-card on-card-swipe="cardSwiped($index)" id="start-card">
+				Swipe down for a new card
+			</swipe-card>
+			<swipe-card ng-repeat="card in cards" on-destroy="cardDestroyed($index)" on-card-swipe="cardSwiped($index)">
+				<div>
+					<div class="title text-center">
+						{{card.title}}
 					</div>
-					<div class="cd-timeline-content padding">
-						<h5 class="cd-timeline-title marginBottom0 marginTop0">{{activity.title}}</h5>
-						<a ng-click="goToDetails(activity.id)" class="cd-timeline-discuss">
-							<i class="ion-document-text dark"></i>
-						</a>
-						<p class="marginTop5 cd-author">{{activity.date}}</p>
-						<p read-more ng-model="activity.text" words="true" length="20"></p>
+					<div class="image">
+						<img ng-src="{{card.image}}">
+					</div>
+					<div class="button-bar">
+						<button class="button button-clear button-positive" ng-click="goToDetails($scope.index)">Праглядзець</button>
 					</div>
 				</div>
-			</div>
-		</section>
+			</swipe-card>
+		</swipe-cards>
+
 	</ion-content>
 </ion-view>
