Added chronicle details.

--- a/www/app/chronicle/chronicle.html
+++ b/www/app/chronicle/chronicle.html
@@ -15,7 +15,7 @@
 						<img ng-src="{{card.image}}">
 					</div>
 					<div class="button-bar">
-						<button class="button button-clear button-positive" ng-click="goToDetails($scope.index)">Праглядзець</button>
+						<button class="button button-clear button-positive" ng-click="goToDetails(index)">Праглядзець</button>
 					</div>
 				</div>
 			</swipe-card>
