--- a/www/app/modern/modern.html
+++ b/www/app/modern/modern.html
@@ -1,7 +1,7 @@
-<ion-view title="Нацыяналістычная хроніка">
+<ion-view title="Сучасная хроніка">
 	<ion-content overflow-scroll="true" padding="true" class="details-content has-header">
 
-		<h4>Нацыяналістычная хроніка</h4>
+		<h4>Сучасная хроніка</h4>
 
 		<ion-pull-up-footer class="bar-dark"
 		                    on-expand="footerExpand()"
