--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,10 @@
 
 	<script src="app/national/national-controller.js"></script>
 
+	<script src="app/soviet/soviet-controller.js"></script>
+
+	<script src="app/modern/modern-controller.js"></script>
+
 	<script src="app/chronicleDetails/chronicleDetails-controller.js"></script>
 
 	<script src="app/login/login-controller.js"></script>
