Added chronicle details.

--- a/www/app/chronicle/chronicle.html
+++ b/www/app/chronicle/chronicle.html
@@ -1,21 +1,22 @@
 <ion-view title="Хроніка">
 	<ion-content overflow-scroll="true" class="chronicle has-header">
 
-
 		<swipe-cards>
-			<swipe-card on-card-swipe="cardSwiped($index)" id="start-card">
-				Swipe down for a new card
-			</swipe-card>
+			<!--<swipe-card on-card-swipe="cardSwiped($index)" id="start-card">-->
+				<!--Swipe down for a new card-->
+			<!--</swipe-card>-->
 			<swipe-card ng-repeat="card in cards" on-destroy="cardDestroyed($index)" on-card-swipe="cardSwiped($index)">
 				<div>
-					<div class="title text-center">
-						{{card.title}}
+					<div class="title text-center neucha-font">
 					</div>
 					<div class="image">
 						<img ng-src="{{card.image}}">
 					</div>
 					<div class="button-bar">
-						<button class="button button-clear button-positive" ng-click="goToDetails(index)">Праглядзець</button>
+
+						<button class="button button-clear button-dark" ng-click="goToDetails(index)">
+						<span class="neucha-font swipe-card-title">{{card.title}}</span>
+						</button>
 					</div>
 				</div>
 			</swipe-card>
