--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,7 @@
 	<link href="css/style.css" rel="stylesheet">
 	<link href="css/swipe-cards.css" rel="stylesheet">
 	<link href="css/chronicle.css" rel="stylesheet">
+	<link href="css/fonts.css" rel="stylesheet">
 
 	<!-- Only required for Tab projects w/ pages in multiple tabs
 	<script src="lib/ionicuirouter/ionicUIRouter.js"></script>
@@ -60,7 +61,7 @@
 <div>
 	<div>
 		<ion-nav-bar class="bar-stable">
-			<ion-nav-back-button class="button-icon icon ion-ios-arrow-back">&#x41D;&#x430;&#x437;&#x430;&#x434;</ion-nav-back-button>
+			<ion-nav-back-button class="button-icon icon ion-ios-arrow-back"> </ion-nav-back-button>
 		</ion-nav-bar>
 		<ion-nav-view></ion-nav-view>
 	</div>
