--- a/www/app/national/national.html
+++ b/www/app/national/national.html
@@ -1,7 +1,27 @@
 <ion-view title="Нацыяналістычная хроніка">
 	<ion-content overflow-scroll="true" padding="true" class="details-content has-header">
 
-		<h4>Нацыяналістычная хроніка</h4>
+		<div class="list card chronicle-slide">
+			<morph-carousel data-items="items" on-selected="selectedItem" show-value="number"></morph-carousel>
+		</div>
+		<section id="cd-timeline" class="cd-container">
+			<div ng-repeat="activity in timeline | filter: {year: selectedItem.number}">
+				<div class="cd-timeline-block">
+					<div class="cd-timeline-picture text-center assertive">
+					</div>
+					<div class="cd-timeline-content padding">
+						<h5 class="cd-timeline-title marginBottom0 marginTop0">{{activity.title}}</h5>
+						<a ng-click="goToDetails(activity.id)" href="" class="cd-timeline-discuss">
+							<i class="ion-document-text dark"></i>
+						</a>
+						<p class="marginTop5 cd-author">{{activity.date}}</p>
+						<p read-more ng-model="activity.text" words="true" length="20"></p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+
 
 		<ion-pull-up-footer class="bar-dark"
 		                    on-expand="footerExpand()"
