--- a/www/app/national/national.html
+++ b/www/app/national/national.html
@@ -4,23 +4,54 @@
 		<div class="list card chronicle-slide">
 			<morph-carousel data-items="items" on-selected="selectedItem" show-value="number"></morph-carousel>
 		</div>
-		<section id="cd-timeline" class="cd-container">
-			<div ng-repeat="activity in timeline | filter: {year: selectedItem.number}">
-				<div class="cd-timeline-block">
-					<div class="cd-timeline-picture text-center assertive">
-					</div>
-					<div class="cd-timeline-content padding">
-						<h5 class="cd-timeline-title marginBottom0 marginTop0">{{activity.title}}</h5>
-						<a ng-click="goToDetails(activity.id)" href="" class="cd-timeline-discuss">
-							<i class="ion-document-text dark"></i>
-						</a>
-						<p class="marginTop5 cd-author">{{activity.date}}</p>
-						<p read-more ng-model="activity.text" words="true" length="20"></p>
-					</div>
-				</div>
-			</div>
-		</section>
 
+		<div class="neucha-font">
+			<div class="row repression-row">
+				<div class="col"><span class="repression-element" ng-click="openPopover($event, 0)">X</span></div>
+				<div class="col"><span class="repression-element">O</span></div>
+				<div class="col"><span class="repression-element" ng-click="openPopover($event, 1)">X</span></div>
+				<div class="col"><span class="repression-element" ng-click="openPopover($event, 2)">X</span></div>
+			</div>
+
+			<div class="row repression-row">
+				<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+				<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+				<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+				<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+			</div>
+
+			<div class="row repression-row">
+				<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+				<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+				<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+				<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+			</div>
+
+			<div class="row repression-row">
+				<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+				<div class="col"><span class="repression-element">O</span></div>
+				<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+				<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+			</div>
+		</div>
+
+
+		<!--<section id="cd-timeline" class="cd-container">-->
+		<!--<div ng-repeat="activity in timeline | filter: {year: selectedItem.number}">-->
+		<!--<div class="cd-timeline-block">-->
+		<!--<div class="cd-timeline-picture text-center assertive">-->
+		<!--</div>-->
+		<!--<div class="cd-timeline-content padding">-->
+		<!--<h5 class="cd-timeline-title marginBottom0 marginTop0">{{activity.title}}</h5>-->
+		<!--<a ng-click="goToDetails(activity.id)" href="" class="cd-timeline-discuss">-->
+		<!--<i class="ion-document-text dark"></i>-->
+		<!--</a>-->
+		<!--<p class="marginTop5 cd-author">{{activity.date}}</p>-->
+		<!--<p read-more ng-model="activity.text" words="true" length="20"></p>-->
+		<!--</div>-->
+		<!--</div>-->
+		<!--</div>-->
+		<!--</section>-->
 
 
 		<ion-pull-up-footer class="bar-dark"
@@ -48,3 +79,14 @@
 
 	</ion-content>
 </ion-view>
+
+<script id="my-popover.html" type="text/ng-template">
+	<ion-popover-view>
+		<ion-header-bar class="repression-title neucha-font">
+			<span>{{repression.name}}</span>
+		</ion-header-bar>
+		<ion-content class="repression-content">
+			<img class="repression-img" ng-src="{{repression.photo}}">
+		</ion-content>
+	</ion-popover-view>
+</script>
