--- a/www/app/chronicleDetails/chronicleDetails.html
+++ b/www/app/chronicleDetails/chronicleDetails.html
@@ -1,5 +1,5 @@
 <ion-view title="Дакументы">
-	<ion-content overflow-scroll="true" padding="true" class="details-content has-header">
+	<ion-content overflow-scroll="true" padding="true" class="national-back has-header">
 
 		<h4>{{selectedChronicle.title}}</h4>
 
