--- a/www/app/national/national.html
+++ b/www/app/national/national.html
@@ -1,5 +1,5 @@
 <ion-view title="Нацыяналістычная хроніка">
-	<ion-content overflow-scroll="true" padding="true" class="details-content has-header">
+	<ion-content overflow-scroll="true" padding="true" class="national-back has-header">
 
 		<div class="list card chronicle-slide">
 			<morph-carousel data-items="items" on-selected="selectedItem" show-value="number"></morph-carousel>
