--- a/www/index.html
+++ b/www/index.html
@@ -24,8 +24,10 @@
 	<script src="app/national/national-service.js"></script>
 
 	<script src="app/soviet/soviet-controller.js"></script>
+	<script src="app/soviet/soviet-service.js"></script>
 
 	<script src="app/modern/modern-controller.js"></script>
+	<script src="app/modern/modern-service.js"></script>
 
 	<script src="app/chronicleDetails/chronicleDetails-controller.js"></script>
 
@@ -53,6 +55,8 @@
 	<link href="css/chronicle.css" rel="stylesheet">
 	<link href="css/fonts.css" rel="stylesheet">
 	<link href="css/national.css" rel="stylesheet">
+	<link href="css/modern.css" rel="stylesheet">
+	<link href="css/polaroids.css" rel="stylesheet">
 
 	<!-- Only required for Tab projects w/ pages in multiple tabs
 	<script src="lib/ionicuirouter/ionicUIRouter.js"></script>
@@ -63,7 +67,7 @@
 <div>
 	<div>
 		<ion-nav-bar class="bar-stable">
-			<ion-nav-back-button class="button-icon icon ion-ios-arrow-back"> </ion-nav-back-button>
+			<ion-nav-back-button class="button-icon icon ion-ios-arrow-back"></ion-nav-back-button>
 		</ion-nav-bar>
 		<ion-nav-view></ion-nav-view>
 	</div>
