--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,8 @@
 	<script src="app/modern/modern-controller.js"></script>
 	<script src="app/modern/modern-service.js"></script>
 
+	<script src="app/intro/intro-controller.js"></script>
+
 	<script src="app/chronicleDetails/chronicleDetails-controller.js"></script>
 
 	<script src="app/login/login-controller.js"></script>
@@ -57,6 +59,7 @@
 	<link href="css/national.css" rel="stylesheet">
 	<link href="css/modern.css" rel="stylesheet">
 	<link href="css/polaroids.css" rel="stylesheet">
+	<link href="css/soviet.css" rel="stylesheet">
 
 	<!-- Only required for Tab projects w/ pages in multiple tabs
 	<script src="lib/ionicuirouter/ionicUIRouter.js"></script>
