--- a/www/app/chronicle/chronicle.html
+++ b/www/app/chronicle/chronicle.html
@@ -1,26 +1,50 @@
 <ion-view title="Хроніка">
-	<ion-content overflow-scroll="true" class="chronicle has-header">
+	<ion-content overflow-scroll="true" class="has-header">
 
-		<swipe-cards>
-			<!--<swipe-card on-card-swipe="cardSwiped($index)" id="start-card">-->
-			<!--Swipe down for a new card-->
-			<!--</swipe-card>-->
-			<swipe-card ng-repeat="card in cards" on-destroy="cardDestroyed($index)" on-card-swipe="cardSwiped($index)">
-				<div>
-					<div class="title text-center neucha-font">
-					</div>
-					<div class="image">
-						<img ng-src="{{card.image}}">
-					</div>
-					<div class="button-bar">
-
-						<button class="button button-clear button-dark" ng-click="goToDetails(index)">
-							<span class="neucha-font swipe-card-title">{{card.title}}</span>
-						</button>
-					</div>
+		<div class="card chronicle-card">
+				<div class="national-card times-font" ng-click="goToDetails('tabs.chronicleNational')">
+					НАЦЫЯНАЛІСТЫЧНАЯ ХРОНІКА
 				</div>
-			</swipe-card>
-		</swipe-cards>
+		</div>
+
+		<div class="card chronicle-card">
+			<div class="soviet-card truth-font" ng-click="goToDetails('tabs.chronicleSoviet')">
+				САВЕЦКАЯ ХРОНІКА
+			</div>
+		</div>
+
+		<div class="card chronicle-card" ng-click="goToDetails('tabs.chronicleModern')">
+			<div class="modern-card helvetica-font">
+				СУЧАСНАЯ ХРОНІКА
+			</div>
+		</div>
 
 	</ion-content>
 </ion-view>
+
+<!--<ion-view title="Хроніка">-->
+	<!--<ion-content overflow-scroll="true" class="chronicle has-header">-->
+
+		<!--<swipe-cards>-->
+			<!--&lt;!&ndash;<swipe-card on-card-swipe="cardSwiped($index)" id="start-card">&ndash;&gt;-->
+			<!--&lt;!&ndash;Swipe down for a new card&ndash;&gt;-->
+			<!--&lt;!&ndash;</swipe-card>&ndash;&gt;-->
+			<!--<swipe-card ng-repeat="card in cards" on-destroy="cardDestroyed($index)" on-card-swipe="cardSwiped($index)">-->
+				<!--<div>-->
+					<!--<div class="title text-center neucha-font">-->
+					<!--</div>-->
+					<!--<div class="image">-->
+						<!--<img ng-src="{{card.image}}">-->
+					<!--</div>-->
+					<!--<div class="button-bar">-->
+
+						<!--<button class="button button-clear button-dark" ng-click="goToDetails(index)">-->
+							<!--<span class="neucha-font swipe-card-title">{{card.title}}</span>-->
+						<!--</button>-->
+					<!--</div>-->
+				<!--</div>-->
+			<!--</swipe-card>-->
+		<!--</swipe-cards>-->
+
+	<!--</ion-content>-->
+<!--</ion-view>-->
