--- a/www/app/settings/settings.html
+++ b/www/app/settings/settings.html
@@ -1,6 +1,8 @@
 <ion-view title="Налады">
 	<ion-content overflow-scroll="true" padding="true" class="has-header">
 
-
+		<div class="versa-font">
+			Brown FOx f;pKJA;LFJWEJNGN
+		</div>
 	</ion-content>
 </ion-view>
