Changes for architecture

--- a/www/app/modern/modern.html
+++ b/www/app/modern/modern.html
@@ -1,5 +1,5 @@
 <ion-view title="Сучасная хроніка">
-	<ion-content overflow-scroll="true" padding="true" class="has-header">
+	<ion-content overflow-scroll="true" padding="true" class="modern-back has-header">
 
 		<div class="list card chronicle-slide">
 			<morph-carousel data-items="items" on-selected="selectedItem" show-value="number"></morph-carousel>
