--- a/www/app/settings/settings.html
+++ b/www/app/settings/settings.html
@@ -1,8 +1,15 @@
 <ion-view title="Налады">
 	<ion-content overflow-scroll="true" padding="true" class="has-header">
+		<div class="settings-back settings-create">
+			<div class="">
 
-		<div class="versa-font">
-			Brown FOx f;pKJA;LFJWEJNGN
+			</div>
+			<button class="button button-balanced" ng-click="goToSignUp()">
+				Стварыць акаўнт
+			</button>
+			<button class="button button-positive ion-social-facebook settings-social"></button>
+			<button class="button button-assertive ion-social-googleplus settings-social"></button>
 		</div>
+
 	</ion-content>
 </ion-view>
