--- a/www/app/soviet/soviet.html
+++ b/www/app/soviet/soviet.html
@@ -7,30 +7,138 @@
 			<span class="ion-chevron-right ion-lg" ng-click="next()"></span>
 		</div>
 
-		<ion-gallery ion-gallery-items="items" ng-show="year === 1919"></ion-gallery>
-
-		<ion-pull-up-footer class="bar-dark"
-		                    on-expand="footerExpand()"
-		                    on-collapse="footerCollapse()"
-		                    initial-state="minimized"
-		                    default-behavior="expand">
-			<ion-pull-up-handle width="100"
-			                    height="25"
-			                    toggle="ion-chevron-up ion-chevron-down"
-			                    class="ion-pull-up-handle">
-				<i class="icon ion-chevron-up"></i>
-			</ion-pull-up-handle>
-
-			<ion-pull-up-content class="details-discuss" scroll="false">
-				<div class="row">
-
+		<div ng-show="year === 1925">
+			<div class="neucha-font">
+				<div class="row repression-row">
+					<div class="col"><span class="repression-element" ng-click="openPopover($event, 0)">X</span></div>
+					<div class="col"><span class="repression-element">O</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event, 1)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event, 2)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
 				</div>
-				<div class="row">
 
+				<div class="row repression-row">
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
 				</div>
-			</ion-pull-up-content>
 
-		</ion-pull-up-footer>
+				<div class="row repression-row">
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+				</div>
+
+				<div class="row repression-row">
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element">O</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+				</div>
+
+				<div class="row repression-row">
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element">O</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+				</div>
+
+				<div class="row repression-row">
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element">O</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+				</div>
+			</div>
+		</div>
+
+		<div ng-show="year === 1926">
+			<ion-gallery ion-gallery-items="items"></ion-gallery>
+
+			<ion-pull-up-footer class="bar-dark"
+			                    on-expand="footerExpand()"
+			                    on-collapse="footerCollapse()"
+			                    initial-state="minimized"
+			                    default-behavior="expand">
+				<ion-pull-up-handle width="100"
+				                    height="25"
+				                    toggle="ion-chevron-up ion-chevron-down"
+				                    class="ion-pull-up-handle">
+					<i class="icon ion-chevron-up"></i>
+				</ion-pull-up-handle>
+
+				<ion-pull-up-content class="details-discuss" scroll="false">
+					<div class="row">
+
+					</div>
+					<div class="row">
+
+					</div>
+				</ion-pull-up-content>
+
+			</ion-pull-up-footer>
+		</div>
 
 	</ion-content>
 </ion-view>
+
+
+<script id="my-popover.html" type="text/ng-template">
+	<ion-popover-view>
+		<ion-header-bar class="repression-title neucha-font">
+			<span>{{repression.name}}</span>
+		</ion-header-bar>
+		<ion-content class="repression-content">
+			<img class="repression-img" ng-src="{{repression.photo}}">
+		</ion-content>
+	</ion-popover-view>
+</script>
