--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,8 @@
 
 	<script src="app/app.js"></script>
 
+	<script src="app/intro/intro-controller.js"></script>
+
 	<script src="app/chronicle/chronicle-controller.js"></script>
 	<script src="app/chronicle/chronicle-service.js"></script>
 
@@ -60,6 +62,8 @@
 	<link href="css/modern.css" rel="stylesheet">
 	<link href="css/polaroids.css" rel="stylesheet">
 	<link href="css/soviet.css" rel="stylesheet">
+	<link href="css/intro.css" rel="stylesheet">
+	<link href="css/settings.css" rel="stylesheet">
 
 	<!-- Only required for Tab projects w/ pages in multiple tabs
 	<script src="lib/ionicuirouter/ionicUIRouter.js"></script>
