--- a/www/app/intro/intro.html
+++ b/www/app/intro/intro.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<ion-view>
+	<ion-content overflow-scroll="true" padding="true" class="intro-back has-header">
+		<div class="intro-title">
+			<div class="ion-ios-people-outline" style="font-size: 120px;"></div>
+			<div>Беларуская iдэнтыка</div>
+		</div>
+		<div class="intro-text" ng-click="goToApp()">
+			Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+			aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+			pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+			est laborum
+		</div>
+	</ion-content>
+</ion-view>
