--- a/www/app/signup/signup.html
+++ b/www/app/signup/signup.html
@@ -13,7 +13,7 @@
 					<input type="text" placeholder="Пароль">
 				</label>
 			</ion-list>
-			<a ui-sref="tabs.chronicle" id="signup-button3" class="button button-outline button-dark button-block">
+			<a ui-sref="tabs.chronicle" id="signup-button3" class="button button-outline button-block">
 				Стварыць
 			</a>
 		</form>
