Changes for architecture

--- a/www/app/national/national.html
+++ b/www/app/national/national.html
@@ -45,7 +45,7 @@
 				            on-destroy="cardDestroyed($index)"
 				            on-card-swipe="cardSwiped($index)">
 					<div>
-						<div class="title text-center neucha-font">
+						<div class="title text-center">
 						</div>
 						<div class="image">
 							<img ng-src="{{card.image}}">
@@ -53,7 +53,7 @@
 						<div class="button-bar">
 
 							<button class="button button-clear button-dark" ng-click="goToDetails(index)">
-								<span class="neucha-font swipe-card-title">{{card.title}}</span>
+								<span class="swipe-card-title">{{card.title}}</span>
 							</button>
 						</div>
 					</div>
