--- a/www/app/signup/signup.html
+++ b/www/app/signup/signup.html
@@ -10,7 +10,7 @@
 					<input type="text" placeholder="Імя">
 				</label>
 				<label class="item item-input" name="Password">
-					<input type="text" placeholder="Пароль">
+					<input type="password" placeholder="Пароль">
 				</label>
 			</ion-list>
 			<a ui-sref="tabs.chronicle" id="signup-button3" class="button button-outline button-block">
