Changed according to comments.

--- a/www/app/intro/intro.html
+++ b/www/app/intro/intro.html
@@ -1,7 +1,7 @@
 <ion-view>
-	<ion-content overflow-scroll="true" padding="true" class="intro-back has-header">
+	<ion-content overflow-scroll="true" padding="true" class="intro-back has-header neucha-font">
 		<div class="intro-title">
-			<div class="ion-ios-people-outline" style="font-size: 120px;"></div>
+			<div class="intro-logo"></div>
 			<div>Беларуская iдэнтыка</div>
 		</div>
 		<div class="intro-text" ng-click="goToApp()">
