--- a/www/app/national/national.html
+++ b/www/app/national/national.html
@@ -61,28 +61,28 @@
 			</swipe-cards>
 		</div>
 
-		<ion-pull-up-footer class="bar-dark"
-		                    on-expand="footerExpand()"
-		                    on-collapse="footerCollapse()"
-		                    initial-state="minimized"
-		                    default-behavior="expand">
-			<ion-pull-up-handle width="100"
-			                    height="25"
-			                    toggle="ion-chevron-up ion-chevron-down"
-			                    class="ion-pull-up-handle">
-				<i class="icon ion-chevron-up"></i>
-			</ion-pull-up-handle>
+		<!--<ion-pull-up-footer class="bar-dark"-->
+		                    <!--on-expand="footerExpand()"-->
+		                    <!--on-collapse="footerCollapse()"-->
+		                    <!--initial-state="minimized"-->
+		                    <!--default-behavior="expand">-->
+			<!--<ion-pull-up-handle width="100"-->
+			                    <!--height="25"-->
+			                    <!--toggle="ion-chevron-up ion-chevron-down"-->
+			                    <!--class="ion-pull-up-handle">-->
+				<!--<i class="icon ion-chevron-up"></i>-->
+			<!--</ion-pull-up-handle>-->
 
-			<ion-pull-up-content class="details-discuss" scroll="false">
-				<div class="row">
+			<!--<ion-pull-up-content class="details-discuss" scroll="false">-->
+				<!--<div class="row">-->
 
-				</div>
-				<div class="row">
+				<!--</div>-->
+				<!--<div class="row">-->
 
-				</div>
-			</ion-pull-up-content>
+				<!--</div>-->
+			<!--</ion-pull-up-content>-->
 
-		</ion-pull-up-footer>
+		<!--</ion-pull-up-footer>-->
 
 	</ion-content>
 </ion-view>
