--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
 	<script src="app/login/login-controller.js"></script>
 
 	<script src="app/settings/settings-controller.js"></script>
+	<script src="app/settings/settings-service.js"></script>
 
 	<script src="app/signup/signup-controller.js"></script>
 
