Changed according to comments.

--- a/www/app/modern/modern.html
+++ b/www/app/modern/modern.html
@@ -1,8 +1,7 @@
 <ion-view title="Сучасная хроніка">
 	<ion-content overflow-scroll="true" padding="true" class="modern-back has-header">
 
-
-
+		<div class="modern-bnr helvetica-font">Б<span class="ion-help"></span>Р</div>
 
 
 	</ion-content>
