--- a/www/app/settings/settings.html
+++ b/www/app/settings/settings.html
@@ -3,7 +3,7 @@
 		<div class="login-hello" ng-show="user">
 			Прывітанне,  {{user}}!
 		<div>
-			<ul class="list">
+			<ul class="list settings-options">
 				<li class="item item-toggle">
 					Опцыя 1
 					<label class="toggle toggle-balanced">
@@ -31,8 +31,35 @@
 						</div>
 					</label>
 				</li>
+				<li class="item item-toggle">
+					Опцыя 4
+					<label class="toggle toggle-balanced">
+						<input type="checkbox">
+						<div class="track">
+							<div class="handle"></div>
+						</div>
+					</label>
+				</li>
+				<li class="item item-toggle">
+					Опцыя 5
+					<label class="toggle toggle-balanced">
+						<input type="checkbox">
+						<div class="track">
+							<div class="handle"></div>
+						</div>
+					</label>
+				</li>
+				<li class="item item-toggle">
+					Опцыя 6
+					<label class="toggle toggle-balanced">
+						<input type="checkbox">
+						<div class="track">
+							<div class="handle"></div>
+						</div>
+					</label>
+				</li>
 			</ul>
-			<button class="button button-balanced">
+			<button class="button button-balanced settings-save">
 				Захаваць
 			</button>
 
