--- a/www/app/intro/intro.html
+++ b/www/app/intro/intro.html
@@ -1,5 +1,5 @@
 <ion-view>
-	<ion-content overflow-scroll="true" padding="true" class="intro-back has-header neucha-font">
+	<ion-content overflow-scroll="true" padding="true" class="intro-back neucha-font">
 		<div class="intro-title">
 			<div class="intro-logo"></div>
 			<div>Беларуская iдэнтыка</div>
