--- a/www/app/soviet/soviet.html
+++ b/www/app/soviet/soviet.html
@@ -98,34 +98,63 @@
 					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
 					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
 				</div>
+
+				<div class="row repression-row">
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element">O</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+				</div>
+				<div class="row repression-row">
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element">O</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+					<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+				</div>
 			</div>
 		</div>
 
 		<div ng-show="year === 1926">
 			<ion-gallery ion-gallery-items="items"></ion-gallery>
 
-			<ion-pull-up-footer class="bar-dark"
-			                    on-expand="footerExpand()"
-			                    on-collapse="footerCollapse()"
-			                    initial-state="minimized"
-			                    default-behavior="expand">
-				<ion-pull-up-handle width="100"
-				                    height="25"
-				                    toggle="ion-chevron-up ion-chevron-down"
-				                    class="ion-pull-up-handle">
-					<i class="icon ion-chevron-up"></i>
-				</ion-pull-up-handle>
+			<!--<ion-pull-up-footer class="bar-dark"-->
+			                    <!--on-expand="footerExpand()"-->
+			                    <!--on-collapse="footerCollapse()"-->
+			                    <!--initial-state="minimized"-->
+			                    <!--default-behavior="expand">-->
+				<!--<ion-pull-up-handle width="100"-->
+				                    <!--height="25"-->
+				                    <!--toggle="ion-chevron-up ion-chevron-down"-->
+				                    <!--class="ion-pull-up-handle">-->
+					<!--<i class="icon ion-chevron-up"></i>-->
+				<!--</ion-pull-up-handle>-->
 
-				<ion-pull-up-content class="details-discuss" scroll="false">
-					<div class="row">
+				<!--<ion-pull-up-content class="details-discuss" scroll="false">-->
+					<!--<div class="row">-->
 
-					</div>
-					<div class="row">
+					<!--</div>-->
+					<!--<div class="row">-->
 
-					</div>
-				</ion-pull-up-content>
+					<!--</div>-->
+				<!--</ion-pull-up-content>-->
 
-			</ion-pull-up-footer>
+			<!--</ion-pull-up-footer>-->
 		</div>
 
 	</ion-content>
@@ -140,5 +169,8 @@
 		<ion-content class="repression-content">
 			<img class="repression-img" ng-src="{{repression.photo}}">
 		</ion-content>
+		<ion-footer-bar class="repression-footer">
+			<span>{{repression.info}}</span>
+		</ion-footer-bar>
 	</ion-popover-view>
 </script>
