Changed according to comments.

--- a/www/app/intro/intro.html
+++ b/www/app/intro/intro.html
@@ -2,13 +2,14 @@
 	<ion-content overflow-scroll="true" padding="true" class="intro-back neucha-font">
 		<div class="intro-title">
 			<div class="intro-logo"></div>
-			<div>Беларуская iдэнтыка</div>
+			<p>Тры гісторыі</p>
+			<p>Беларускай Народнай Рэспублікі</p>
 		</div>
-		<div class="intro-text" ng-click="goToApp()">
+		<p class="intro-text" ng-click="goToApp()">
 			Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
 			aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
 			pariatur
-		</div>
+		</p>
 	</ion-content>
 </ion-view>
