--- a/www/app/modern/modern.html
+++ b/www/app/modern/modern.html
@@ -1,13 +1,11 @@
 <ion-view title="Сучасная хроніка">
 	<ion-content overflow-scroll="true" padding="true" class="modern-back has-header">
 
-		<div class="slab-font text-center modern-date-wrapper">
-			<span class="ion-chevron-left ion-lg" ng-click="prev()"></span>
-			<span class="modern-date">{{year}}</span>
-			<span class="ion-chevron-right ion-lg" ng-click="next()"></span>
+		<div class="list card chronicle-slide">
+			<morph-carousel class="modern-carousel" data-items="years" on-selected="selectedYear" show-value="number"></morph-carousel>
 		</div>
 
-		<div ng-show="year === 1925">
+		<div ng-show="selectedYear.number === 1925">
 			<div class="modern-bnr impact-font">
 				Б<span class="ion-help"></span>Р
 			</div>
@@ -16,7 +14,7 @@
 			</div>
 		</div>
 
-		<div ng-show="year === 1926">
+		<div ng-show="selectedYear.number === 1926">
 			<ion-gallery ion-gallery-items="items"></ion-gallery>
 
 		</div>
