--- a/www/app/national/national.html
+++ b/www/app/national/national.html
@@ -2,41 +2,18 @@
 	<ion-content overflow-scroll="true" padding="false" class="national-back has-header">
 
 		<div class="list card chronicle-slide">
-			<morph-carousel data-items="items" on-selected="selectedItem" show-value="number"></morph-carousel>
+			<morph-carousel data-items="years" on-selected="selectedYear" show-value="number"></morph-carousel>
 		</div>
 
-		<!--<section id="cd-timeline" class="cd-container">-->
-		<!--<div ng-repeat="activity in timeline | filter: {year: selectedItem.number}">-->
-		<!--<div class="cd-timeline-block">-->
-		<!--<div class="cd-timeline-picture text-center assertive">-->
-		<!--</div>-->
-		<!--<div class="cd-timeline-content padding">-->
-		<!--<h5 class="cd-timeline-title marginBottom0 marginTop0">{{activity.title}}</h5>-->
-		<!--<a ng-click="goToDetails(activity.id)" href="" class="cd-timeline-discuss">-->
-		<!--<i class="ion-document-text dark"></i>-->
-		<!--</a>-->
-		<!--<p class="marginTop5 cd-author">{{activity.date}}</p>-->
-		<!--<p read-more ng-model="activity.text" words="true" length="20"></p>-->
-		<!--</div>-->
-		<!--</div>-->
-		<!--</div>-->
-		<!--</section>-->
+		<div ng-show="selectedYear.number === 1904" ng-include="'app/national/templates/alpha.html'"></div>
 
-		<div ng-show="selectedItem.number === 1918">
-			<div class="circle">
+		<div ng-show="selectedYear.number === 1905" ng-include="'app/national/templates/idea.html'"></div>
 
-			</div>
+		<div ng-show="selectedYear.number === 1906" ng-include="'app/national/templates/sun.html'"></div>
 
-			<div class="bnr-text">
-				БНР
-			</div>
+		<div ng-show="selectedYear.number === 1918" ng-include="'app/national/templates/circle.html'"></div>
 
-			<div class="triangle">
-
-			</div>
-		</div>
-
-		<div ng-show="selectedItem.number === 1919">
+		<div ng-show="selectedYear.number === 1919">
 			<swipe-cards>
 				<!--<swipe-card on-card-swipe="cardSwiped($index)" id="start-card">-->
 				<!--Swipe down for a new card-->
@@ -61,28 +38,7 @@
 			</swipe-cards>
 		</div>
 
-		<!--<ion-pull-up-footer class="bar-dark"-->
-		                    <!--on-expand="footerExpand()"-->
-		                    <!--on-collapse="footerCollapse()"-->
-		                    <!--initial-state="minimized"-->
-		                    <!--default-behavior="expand">-->
-			<!--<ion-pull-up-handle width="100"-->
-			                    <!--height="25"-->
-			                    <!--toggle="ion-chevron-up ion-chevron-down"-->
-			                    <!--class="ion-pull-up-handle">-->
-				<!--<i class="icon ion-chevron-up"></i>-->
-			<!--</ion-pull-up-handle>-->
-
-			<!--<ion-pull-up-content class="details-discuss" scroll="false">-->
-				<!--<div class="row">-->
-
-				<!--</div>-->
-				<!--<div class="row">-->
-
-				<!--</div>-->
-			<!--</ion-pull-up-content>-->
-
-		<!--</ion-pull-up-footer>-->
+		<div ng-show="selectedYear.number === 1920" ng-include="'app/national/templates/bssr.html'">
 
 	</ion-content>
 </ion-view>
